<resources>
    <string name="app_name">Contacts</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="save_contact">Save contact</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="fill_fields">Please fill the fields</string>
    <string name="call">Call</string>
    <string name="send_msg">Send msg</string>
    <string name="change">Change</string>
    <string name="contact_name">Name:</string>
    <string name="number">Number:</string>
</resources>